WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53962
[GTK] EventSender.keyDown does not support non-array modifier arguments
https://bugs.webkit.org/show_bug.cgi?id=53962
Summary
[GTK] EventSender.keyDown does not support non-array modifier arguments
Martin Robinson
Reported
2011-02-07 16:41:13 PST
This can be seem by the failure of fast/forms/legend-access-key.html which uses "altKey" as the modifier argument.
Attachments
Patch
(5.32 KB, patch)
2011-02-07 18:03 PST
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2011-02-07 18:03:13 PST
Created
attachment 81560
[details]
Patch
Eric Seidel (no email)
Comment 2
2011-02-07 23:43:12 PST
Comment on
attachment 81560
[details]
Patch Very nice. Nice use of a helper function.
Martin Robinson
Comment 3
2011-02-08 07:57:28 PST
Comment on
attachment 81560
[details]
Patch Clearing flags on attachment: 81560 Committed
r77936
: <
http://trac.webkit.org/changeset/77936
>
Martin Robinson
Comment 4
2011-02-08 07:57:31 PST
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 5
2012-09-17 15:59:22 PDT
This looks wrong. This is just a mistake in a single test. Eric, you reviewed this. How did you decide that this change was OK?
Eric Seidel (no email)
Comment 6
2012-09-17 16:08:45 PDT
Donno. I mean, the option seems reasonable to me. Checking if the arg is a string vs. array seems like a totally reasonable API convenience. But if you feel strongly, I'm sure it can be removed.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug