2011-02-08  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Eric Seidel.

        [GTK] EventSender.keyDown does not support non-array modifier arguments
        https://bugs.webkit.org/show_bug.cgi?id=53962

        * platform/gtk/Skipped: Unskip a test which is now passing.
2011-02-08  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Eric Seidel.

        [GTK] EventSender.keyDown does not support non-array modifier arguments
        https://bugs.webkit.org/show_bug.cgi?id=53962

        Support handling either an array or a string for the modifier argument
        to EventSender.keyDown.

        * DumpRenderTree/gtk/EventSender.cpp:
        (gdkModifierFromJSValue): Added this helper which factors out the
        string comparison bits.
        (gdkModifersFromJSValue): Test up front whether the value is a string,
        to handle it specially.

Canonical link: https://commits.webkit.org/67995@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77936 268f45cc-cd09-0410-ab3c-d52691b4dbfc